*Empty MediaWiki Message*

--- a/Mark_Hoppus.mw
+++ b/Mark_Hoppus.mw
@@ -1,14 +1,13 @@
-'''Mark Hoppus''' (Ridgecrest, Californië, [[15 moarte]] [[1972]]) is nen Amerikoanschn basgitarist en êen van de stichters van de pop-punkgroep [[Blink 182|Blink-182]].
+'''Mark Hoppus''' (Ridgecrest, Californië, [[15 moarte]] [[1972]]) is nen Amerikoanschn basgitarist en êen van de stichters van de pop-punkgroep [[Blink 182|blink-182]].
 
 Wanneer dat em 15 werd, kreegt ie em z'n êeste basgitare achter dat em g'olpn eet met 't uus te schildern.
 D'r achter eet Mark in twêe bands gespeeld. Toen dat ie no San Diego veruusde vo z'n studie, kwam tie doar [[Tom Delonge]] teegn, da toen 't vrindje wos van z'n zuster Anna Hoppus. Ze leerden mekoar kenn in 't joar 1992.
 
 == '''Den blink tyd''' ==
-Toen do den drummer [[Scott Raynor]] en Mark gin wuven kondn krygn, en ze ton mo uut vervelinge beslootn om nen band ip te richtn. Wont zeggn ze, vrouwn oudn van muziekantn. No e poar demotjes en ze ton beslootn om de band "blink" te dopn. Mark werkte ton nog tout in 1996 in ne muziekwinkle, en derno ist'ie gestopt, en et'ie full-time gon tourn mè zyne band. Ton enze de noame moetn verandern wont en Ierse technoband noemden al "blink", en dreigde me ne rechtzoake. Ton en ze de noame veranderd no [[Blink 182]]. In 1999 gaft'ie den drummer Scott een ultimatum: stoppn mé drummn of stopn mè zuupn. Uuteindlik ebn zem deruut gezwierd en werd [[Travis Barker]] full-time drummer.
+Omda den drummer [[Scott Raynor]] en Mark gin wuven kondn krygn, en ze ton mo uut vervelinge beslootn om nen band ip te richtn. Want zeggn ze, vrouwn oudn van muzikantn. Achter e poar demotjes en ze ton beslootn om de band "blink" te doopn. Mark werkte ton nog tout in 1996 in ne muziekwinkle, en d'r achter ist'ie gestopt, en et ie full-time gon tourn mè zyne band. Ton en ze de noame moetn verandern want en Ierse technoband noemde al "blink", en dreigde me ne rechtzoake. Ton en ze de noame veranderd no [[Blink 182|blink-182]]. In 1999 gaft'ie den drummer Scott een ultimatum: stoppn mè drummn of stoppn mè zuupn. Uuteindlik en z'em deruut gezwierd en werd [[Travis Barker]] full-time drummer.
 
-== ''' Achter den Blink tyd''' ==
-Achter Blink is Mark zynn eigen band begonnen genoamd +44.
-Et eeft to nu toe al en albume utgebroacht noamelik
+== ''' Achter den blink tyd''' ==
+Achter blink is Mark zynn eigen band begonnen genoamd +44. De groep eet to nu toe al en album utgebrocht noamelik
 ''"When your heart stops beating"''.
 
 [[Categorie:Amerikoansn muzikant]]
