*Empty MediaWiki Message*

--- a/Maria_van_Bourgondië.mw
+++ b/Maria_van_Bourgondië.mw
@@ -49,7 +49,7 @@ By upgroaviengn round 1980 èn ze 't graf van Maria weregevoundn, moa nie van da
 *Portret in [http://www.inghist.nl/Onderzoek/Projecten/DVN/lemmata/data/Maria%20van%20Bourgondie Digitaal Vrouwenlexicon]
 
 [[Categorie:Ertog van Bourgondië]]
-[[Categorie:Groaf van Vloandern]]
+[[Categorie:Gravinne van Vloandern]]
 
 [[bg:Мария Бургундска]]
 [[ca:Maria de Borgonya]]
