*Empty MediaWiki Message*

--- a/Viertorre_(Blanknberge).mw
+++ b/Viertorre_(Blanknberge).mw
@@ -1,13 +1,8 @@
 [[Ofbeeldienge: Blankenberge Vuurtoren 01.jpg|thumb|<center>Viertorre van Blanknberge]]
-[[Ofbeeldienge:Heist Hoog Licht.jpg|thumb|<center>Oude viertorre (1907) van Heist]]
-Een '''viertorre''' an de [[Vlamsche Kust]] is een torre  die dient vo ’s nachts of os ‘t  stormt an de scheepn te toogn woar da d’oavn of d’oavngeule ligt.
-
-Vroeger was da met een oopn vier, nu met een zwoailucht.
+De '''viertorre van Blanknberge''' stoat an de westkant van de zêedyk.
 ==Geschiedenisse==
-Deur dat er vele documentn uut de 13e en 14e eeuwe kwytgerakt zyn, ist er nie zo vele mêe bekend over de Vlamsche viertorres uut die periode. D’r zyn wel documentn weregevoundn die vermeldn da [[Nieuwpoort]] in [[1306]] twêe “Vierboetn” aad. De viertorre van [[Heist]] wordt vermeld in ’t joar [[1363]].
-
-De [[Blanknberge|Blanknbergsche]] viertorre wordt vo ‘t êest vermeld in [[1337]]. Je stound ton in ’t ôostn van de stad.
-Ofbeeldingn of tekeningn uut die periode zyn d’r nie, moa wel uutgoavepostn van de stadsrekeningn.
+De [[Blanknberge|Blanknbergsche]] [[viertorre]] wordt vo ‘t êest vermeld in [[1337]]. Je stound ton in ’t ôostn van de stad.
+Ofbeeldingn of têkeningn uut die periode zyn d’r nie, moa wel uutgoavepostn van de stadsrekeningn.
 In [[1394]] ist er deur ‘t stadsmagistroat een primitieve viertorre of "viermast" ipgericht. Je stound in ‘t ôostn van de kerkstroate van nu, te middn van de [[dune]]n. ‘t Was een poale, deur keetns rechteg’oudn, mè zwoare stêens d’r round. Boven ip de poale wast er een simpele vierkante lanteirn angebrocht mè doarin "een eerdene vierpanne" (een panne in eirdewerk) met een lamet of wiek, gemakt van touwe en lynwas. Iedern dag teegn den oavond kwoamn d’r twêe oude visschers, tegoare met een scheepsknecht, vo de lanteirn an te steekn. Ze brochtn een pulle mee gevuld met e mingsel van olie en reuzel. De scheepsknecht klemdege ton ip de mast, vuldege de vierpanne en stak de wiek an. ’t Ounderoud van de viermast viel ten laste van de visschers, die doarom verplicht woarn van “viergeld” te betoaln. 
 
 Loater is de viermast vervangn deur een torre in stêen, woarin dat er vo brandstoffe strooi gebruukt wierd, vo lucht te geevn. 
@@ -26,7 +21,7 @@ By den anleg van de Blanknbergschn oavn (1863-71) liet ‘t Ryk in [[1870]] een 
 
 In [[1944]] is die viertorre vernield deur de Duutschers ([[Twidde Weireldoorloge]]).
 
-De viertorre van nu stoat an de westkant van den [[dyk]] en is vo ’t êest gebruukt in [[1950]]. De latste viertorrewachter is gestorvn in 1970. Noadien zyn d'r nog twêe ipzichters angesteld die allêne moa belast woarn me ’t ounderoud van ‘t gebouw, want de luchtn wierdn ton al bediend vanuut [[Zêebrugge]].
+De viertorre van nu is vo ’t êest gebruukt in [[1950]]. De latste viertorrewachter is gestorvn in 1970. Noadien zyn d'r nog twêe ipzichters angesteld die allêne moa belast woarn me ’t ounderoud van ‘t gebouw, want de luchtn wierdn ton al bediend vanuut [[Zêebrugge]].
 
 ==Zêegenootschap==
 't Zêegenootschap, een club die gepassioneerd is deur 't leevn ip zêe krêeg in [[1994]] de toeloatinge vor een "zêemuseum" en "nautisch en didactisch informoatiecenter" ip te richtn in 't viertorregebouw. D'r angt ook een gedenkploate vo weireldzeiler [[Staf Versluys]] en 'n ipschrift ter êre van [[Jacques Brel]], leeftydgenoot van Versluys met de zelfste passie vo [[zeiln]]. 
