*Empty MediaWiki Message*

--- a/Frankisch_Ryk.mw
+++ b/Frankisch_Ryk.mw
@@ -4,7 +4,7 @@
 Volgns ’t Frankisch recht most, achter d’n dôod van de keunink, ’t Ryk ossan verdêeld wordn ounder de verschillige zeuns, wa dat ’n enormn invloed aad ip de verdere geschiedenisse van ’t gebied.
 
 ==De Frankn==
-De Frankn woarn oorsprounkelik een verzoamelinge van Germoansche stammn  ten oostn van de Reyn. Ze begostn ol van ‘t joar 257 ‘t groundgebied van ‘t [[Romeins Ryk]] binn te volln. 
+De Frankn woarn oorsprounkelik een verzoamelienge van Germoansche stammn  ten oostn van de Reyn. Ze begostn ol van ‘t joar 257 ‘t groundgebied van ‘t [[Romeins Ryk]] binn te volln. 
 
 Theodosius I was keizer van ‘t Romeins Ryk van 379 tout 395. Achter z’n dôod in 395 wierd ’t Ryk were, en nu definitief, gesplitst in een  [[West-Romeins Ryk]] en een Oost-Romeins Ryk of [[Byzantyns Ryk]]. ’t West-Romeins Ryk bleef bestoan tout in 476.
 
@@ -37,13 +37,13 @@ Zyn besteur was g’inspireerd  ip de klassiekn oudeid en ip [[Kestdag]] 800 lie
 In 843, by ‘t [[Verdrag van Verdun]] wierd ’t Ryk were verdeeld ounder drie zeuns: Karel II of [[Karel den Kletsn]] kreeg [[West-Francië]], Lodewyk II den Duuts [[Oost-Francië]], en ’t Middnryk, ’t belangrykste, gink noa d’n oudstn, Lotharius I.
 
 ==Boudewyn I met den Yzern oarm==
-Uut de Frankischn tyd dateert d’indelinge in ''pagi'' of  ''gouwn''. Ze woarn veel klinder of  uze provincies van nu. Sommigte noamn bestoan nu nog, lik Haspngouw (Pagus Hasbaniensis) en Henegouw (Pagus Hainoensis).
+Uut de Frankischn tyd dateert d’indelienge in ''pagi'' of  ''gouwn''. Ze woarn veel klinder of  uze provincies van nu. Sommigte noamn bestoan nu nog, lik Haspngouw (Pagus Hasbaniensis) en Henegouw (Pagus Hainoensis).
 
-In de 9e eeuwe, ounder Karel den Kletsn, besteurde [[Boudewyn I van Vloandern]] de Vloanderngouw (Latyn: Pagus Flandrensis), de streke round [[Toeroet|Tourout]], [[Gistel]], [[Oudenburg]] en [[Brugge]]. Je was den eestn gouwgroaf en uut de Vloanderngouw groeide ‘t [[Groafschap Vloandern]]. 
+In de 9e eeuwe, ounder Karel den Kletsn, besteurde [[Boudewyn I van Vloandern]] de Vloanderngouwe (Latyn: Pagus Flandrensis), de streke round [[Toeroet|Tourout]], [[Gistel]], [[Oudenburg]] en [[Brugge]]. Je was den eestn gouwgroaf en uut de Vloanderngouwe groeide ‘t [[Groafschap Vloandern]]. 
 
 De Deensche [[Vikings]] plunderdn ol e hêeln tyd uze gebiedn. Ze droungn met under snekkn mè drakarkoppn zô verre meugelik ’t land binn.
-In dien tyd kostn ze met under bootn langs de zeeoarm ’t [[Zwin]] en de riviere de Reie tout in Brugge voarn. Ze noemdn die platse ''Bryghia'' wat dat in under toale ‘anlegplatse’ wilde zeggn. Vo de Vikings teegn t'oudn liet Boudewyn een versterktn burcht bouwn ip de plekke woa da nu de Brugschn Burg is.  
-Brugge was ollene moa bereikboar met oog woater, moar e grote overstromienge in de 12e eeuwe makte ’t Zwin loater ôok bevoarboar vo grottere scheepn.
+In dien tyd kostn ze met under bootn langs de zeeoarm ’t [[Zwin]] en de riviere de Reie tout in Brugge voarn. Ze noemdn die platse ''Bryghia'' wat dat Oudnoors is vo ‘anlegplatse’. Vo de Vikings teegn t'oudn liet Boudewyn een versterktn burcht bouwn ip de plekke woa da nu de [[Burg (Brugge)|Burg]] is.  
+Brugge was ollene moa bereikboar met oog woater, moa de [[Duunkerke III#Stormvloed van 1134|stormvloed van 1134]] makte ’t Zwin loater ôok bevoarboar vo grottere scheepn.
 
 [[Categorie: Frankisch Ryk]]
 
