*Empty MediaWiki Message*

--- a/Viertorre_(Blanknberge).mw
+++ b/Viertorre_(Blanknberge).mw
@@ -1,23 +1,23 @@
 [[Ofbeeldienge: Blankenberge Vuurtoren 01.jpg|thumb|<center>Viertorre van Blanknberge]]
 De '''viertorre van Blanknberge''' stoat an de westkant van de zêedyk.
 ==Geschiedenisse==
-De [[Blanknberge|Blanknbergsche]] [[viertorre]] wordt vo ‘t êest vermeld in [[1337]]. Je stound ton in ’t ôostn van de stad.
+De [[Blanknberge|Blanknbergsche]] [[viertorre]] wordt vo ‘t êest vermeld in 1337. Je stound ton in ’t ôostn van de stad.
 Ofbeeldingn of têkeningn uut die periode zyn d’r nie, moa wel uutgoavepostn van de stadsrekeningn.
-In [[1394]] ist er deur ‘t stadsmagistroat een primitieve viertorre of "viermast" ipgericht. Je stound in ‘t ôostn van de kerkstroate van nu, te middn van de [[dune]]n. ‘t Was een poale, deur keetns rechteg’oudn, mè zwoare stêens d’r round. Boven ip de poale wast er een simpele vierkante lanteirn angebrocht mè doarin "een eerdene vierpanne" (een panne in eirdewerk) met een lamet of wiek, gemakt van touwe en lynwas. Iedern dag teegn den oavond kwoamn d’r twêe oude visschers, tegoare met een scheepsknecht, vo de lanteirn an te steekn. Ze brochtn een pulle mee gevuld met e mingsel van olie en reuzel. De scheepsknecht klemdege ton ip de mast, vuldege de vierpanne en stak de wiek an. ’t Ounderoud van de viermast viel ten laste van de visschers, die doarom verplicht woarn van “viergeld” te betoaln. 
+In 1394 ist er deur ‘t stadsmagistroat een primitieve viertorre of "viermast" ipgericht. Je stound in ‘t ôostn van de kerkstroate van nu, te middn van de [[dune]]n. ‘t Was een poale, deur keetns rechteg’oudn, mè zwoare stêens d’r round. Boven ip de poale wast er een simpele vierkante lanteirn angebrocht mè doarin "een eerdene vierpanne" (een panne in eirdewerk) met een lamet of wiek, gemakt van touwe en lynwas. Iedern dag teegn den oavend kwoamn d’r twêe oude visschers, tegoare met een scheepsknecht, vo de lanteirn an te steekn. Ze brochtn een pulle mee gevuld met e mingsel van olie en reuzel. De scheepsknecht klemdege ton ip de mast, vuldege de vierpanne en stak de wiek an. ’t Ounderoud van de viermast viel ten laste van de visschers, die doarom verplicht woarn van ''viergeld'' te betoaln. 
 
 Loater is de viermast vervangn deur een torre in stêen, woarin dat er vo brandstoffe strooi gebruukt wierd, vo lucht te geevn. 
-In de geschriftn kun j’ook leezn da temmerman Jan de Juede in [[1421]] werktege an de vierboete, en boutn, noagels en ankers leverde. Ook da de stad in [[1442]] Cornelis Godewaert betoaldege vo ‘t ipkuuschn van d'assche. 
-’t Is vaneigns nie te verwoundern dat ‘t stookn van strooi en out, vele brandgevoar meebrocht. Regelmoatig brandege de torre uut. In 1484-85 is ‘t boovnste dêel vernieuwd achter e brand. Michiel van Langhemaere vernieuwdege nog e kêe de kappe in [[1524]] moar in [[1526]] brandege de torre helegans of. 
+In de geschriftn kun j’ook leezn da temmerman Jan de Juede in [[1421]] werktege an de vierboete, en boutn, noagels en ankers leverde. Ook da de stad in 1442 Cornelis Godewaert betoaldege vo ‘t ipkuuschn van d'assche. 
+’t Is vaneigns nie te verwoundern dat ‘t stookn van strooi en out, vele brandgevoar meebrocht. Regelmoatig brandege de torre uut. In 1484-85 is ‘t boovnste dêel vernieuwd achter e brand. Michiel van Langhemaere vernieuwdege nog e kêe de kappe in 1524 moar in 1526 brandege de torre helegans of. 
 
-De metsers Pier Ketele, Jacob Kint en Michiel Langhemaere reisdegen noar Ostende en Nieuwpoort vo doa te kykn noa de vierboetn en ton dezelfstn te bouwn in Blanknberge. Een poar joar loater in [[1537]] wast er were brand en in [[1555]] wierd de viertorre were lêlik toegetoakeld. De Brugsche metser Jerome van der Beke brocht 1800 bakstêens en 25 werkdoagn in rekeninge vo ‘t erstel. Moa tien joar loater was 't were van dadde en d’r wierd were e nieuwe torre gebouwd. 
+De metsers Pier Ketele, Jacob Kint en Michiel Langhemaere reisdegen noar [[Ostende]] en [[Nieuwpoort]] vo doa te kykn noa de vierboetn en ton dezelfstn te bouwn in Blanknberge. Een poar joar loater in 1537 wast er were brand en in [[1555]] wierd de viertorre were lêlik toegetoakeld. De [[Brugge|Brugsche]] metser Jerome van der Beke brocht 1800 bakstêens en 25 werkdoagn in rekeninge vo ‘t erstel. Moa tien joar loater was 't were van dadde en d’r wierd were e nieuwe torre gebouwd. 
 
-De torre stound er nog moa in [[1556]], of de woatergeuzn begostn de zêe en de kust ounveilig te moakn. Achter de zomer van [[1572]] ountscheeptn ze vanuut [[Vlissingn]] in Blanknberge en ‘t [[Brugse Vrye]]. Die periode was een rampe vor uze gewestn. 
+De torre stound er nog moa in 1556, of de woatergeuzn begostn de zêe en de kust ounveilig te moakn. Achter de zomer van 1572 ountscheeptn ze vanuut Vlissingn in Blanknberge en ‘t [[Brugse Vrye]]. Die periode was een rampe vor uze gewestn. 
 
-’t Is moar in de [[Oostnrykse Nederlandn|Oostnryk]]sche periode dat er were geschriftn gevoundn zyn over e viertorre ([[1771]]). De “bouwheer” was de stad Blanknberge en de kostprys was 29 pound. Moa ’t zagt er noar uut da de nieuwe viertorre een gevoar was vo de visschersstad omda de “vierboete” in de dunen stound rechte teegnover de stad. Omdat er al e grôte brand gewist was in [[1719]], woarn d’r verschillige menschn die klacht indiendn by burgemeester Pollet. Burgemêester en scheepnen voundn de klachtn geground en beslistn ip 14 meie [[1772]] de vierboete te verplatsn, meer ôostwoarts van de visscherswyk. Die viertorre is verzekers deur den oorloge in [[1795]] in ounbruuk gerakt en hêlegans vervalln. 
+’t Is moar in de [[Oostnrykse Nederlandn|Oostnryk]]sche periode dat er were geschriftn gevoundn zyn over e viertorre (1771). De ''bouwheer'' was de stad Blanknberge en de kostprys was 29 pound. Moa ’t zagt er noar uut da de nieuwe viertorre een gevoar was vo de visschersstad omda de ''vierboete'' in de dunen stound rechte teegnover de stad. Omdat er al e grôte brand gewist was in 1719, woarn d’r verschillige menschn die klacht indiendn by burgemeester Pollet. Burgemêester en scheepnen voundn de klachtn geground en beslistn ip 14 meie 1772 de vierboete te verplatsn, meer ôostwoarts van de visscherswyk. Die viertorre is verzekers deur den oorloge in [[1795]] in ounbruuk gerakt en hêlegans vervalln. 
 
-In [[1810]] wierd er ip bevel van [[Napoleon]] een versterkte torre gebouwd in de dunen ter oogte van de casino van nu. ‘t Was gin viertorre moa je wierd loater doavoorn gebruukt. Napoleon wildege een [[fort]] in de dunen met de bedoelinge vo de [[Ingeland|Ingelsche]] scheepn te bespiedn en van de kust weg t’oudn. ‘t Is ounder ‘t bestier van d'Ollanders dat er in [[1817]] ip ‘t fort een lucht gezet is. Die viertorre blêef in gebruuk tout [[1872]]. 
+In 1810 wierd er ip bevel van [[Napoleon]] een versterkte torre gebouwd in de dunen ter oogte van de [[Casino (Blanknberge)|casino]] van nu. ‘t Was gin viertorre moa je wierd loater doavoorn gebruukt. Napoleon wildege een fort in de dunen met de bedoelinge vo de [[Ingeland|Ingelsche]] scheepn te bespiedn en van de kust weg t’oudn. ‘t Is ounder ‘t bestier van d'Ollanders dat er in 1817 ip ‘t fort een lucht gezet is. Die viertorre blêef in gebruuk tout [[1872]]. 
 
-By den anleg van de Blanknbergschn oavn (1863-71) liet ‘t Ryk in [[1870]] een nieuwe viertorre neffest d'oavngeule bouwn. ‘t Was een achtoekige torre, 17 m oge in Boomsche bakstêen me meurn van 1,5 m dikke. Van ounder was ‘t verbluuf van de viertorrewachter en een stoapelplekke vo materioal. De torre teldege 121 trappn en de lanteirn kwam van 't Ingelsche [[Birmingham]]. Ip 1 juli [[1895]] is de vaste lucht van de viertorre vervangn deur e knipperlucht, die om de 15 secondn knipperde. 
+By den anleg van d'oave van Blanknberge (1863-71) liet ‘t Ryk in 1870 een nieuwe viertorre neffest d'oavegeule bouwn. ‘t Was een achtoekige torre, 17 m oge in Boomsche bakstêen me meurn van 1,5 m dikke. Van ounder was ‘t verbluuf van de viertorrewachter en een stoapelplekke vo materioal. De torre teldege 121 trappn en de lanteirn kwam van 't Ingelsche Birmingham. Ip 1 juli [[1895]] is de vaste lucht van de viertorre vervangn deur e knipperlucht, die om de 15 secondn knipperde. 
 
 In [[1944]] is die viertorre vernield deur de Duutschers ([[Twidde Weireldoorloge]]).
 
