*Empty MediaWiki Message*

--- a/1404.mw
+++ b/1404.mw
@@ -6,7 +6,7 @@
 ;november
 *[[19 november|19]] - [[Duunkerke III|Eestn Sint-Elizabethsvloed]]
 
-[[Categorie:15e eeuw]]
+[[Categorie:1400-1409]]
 
 [[af:1404]]
 [[am:1404 እ.ኤ.አ.]]
