*Empty MediaWiki Message*

--- a/Death.mw
+++ b/Death.mw
@@ -1,5 +1,5 @@
 [[Ofbeeldienge:Chuck Schuldiner.jpg|right|thumb|200px|Chuck Schuldiner, 'n uprichter van Death, in 1992.]]
-'''Death''' is e deathmetalband uut Orlando in de [[USA|Verênigde Stoatn]] en die upericht is deur Chuck Schuldiner. Z'en bestoan van 1983 (toune nog ''Mantas'') toet 1999. Ze zyn olgemêen anzien lik de uutvinders van 't genre ''Death Metal''.
+'''Death''' is e deathmetalband uut Orlando in de [[USA|Verênigde Stoatn]] en die upericht is deur Chuck Schuldiner. Z'en bestoan van 1983 (toune nog ''Mantas'') toet 2001 (de latste joarn eigentlik ounder de noame ''Control Denied''). Ze zyn olgemêen anzien lik de uutvinders van 't genre ''Death Metal''.
 
 ==Ountstoan==
 ===1983-1987: van d'êeste demo's toet Scream Bloody Gore===
