--- a/NGA.mw
+++ b/NGA.mw
@@ -7,7 +7,7 @@ De '''NGA''' of '''Nieuw-Gentse Alliantie''' is e ludiekn actiegroup en politiek
 Verre olles van de NGA is achteredoan van de [[N-VA]] (noame en indêlienge van de site) en 't [[Vlams Belang]] (70-puntnplan van [[Filip Dewinter]], oofddoekn, GMO) of van olletwêe (ounofankelikeid).
 
 ==Ounofankelikeid==
-Up 30 moarte van 2008 gon ze Gent ounofankelik verkloarn en de stadstoat uutroepn. Olle fêestelikeedn goan deuregoan byn Sint-Joacobs. 't Stoatsoofd van de Gentsche Vrystoat got de tsoar of keizer zyn en 'n dien ze paleis got in Moscou (e wyk in Ledeberg) stoan.
+Up 30 moarte van 2008 ein ze Gent ounofankelik verkloart en de stadstoat uutgeroepn.  Olle fêestelikeedn gingn deuregoan byn Sint-Joacobs. 't Stoatsoofd van de Gentsche Vrystoat got de tsoar of keizer zyn en 'n dien ze paleis got in Moscou (e wyk in Ledeberg) stoan. [[Jan Hoet]] es verkoozen gewist tot keizer.
 
 ==70-puntnplan==
 Nog nie olle puntn zyn ingevuld, mo sommigte puntn goan specifiek over West-Vloamiengn:
