--- a/Lyste_van_West-Vlamsche_zangers_e_zangeressn.mw
+++ b/Lyste_van_West-Vlamsche_zangers_e_zangeressn.mw
@@ -11,6 +11,9 @@ Dit is e '''lyste van West-Vlamsche zangers e zangeressn'''.
 * [[Annelies Cappaert]]
 * [[Sarah Cappaert]]
 
+==F==
+* [[Jimmy Frey]]
+
 ==I==
 * [[Ingeborg]]
 
