--- a/Passchendoale_(Zunnebeke).mw
+++ b/Passchendoale_(Zunnebeke).mw
@@ -1,7 +1,7 @@
 [[Ofbeeldienge:Tyne Cot Cemetery at dusk 2 - Redvers.jpg|thumb|[[Tyne Cot cemetery]] in Passchendoale]]
 '''Passchendoale''' (te plekke oek ''Passendoale'', Nederlands: Passendale) is e parochie in Grôot-[[Zunnebeke]]. 't Weunn bykans 3000 menschn en 't is achter Zunnebeke zevve de grotste dêelgemêente.
 
-Voe vele [[Iengeland|Iengelsche]] is Passchendoale oek synoniem me d'elle, degêne die nie dôod woarn, zein da ze de psychischn dôod an gevoen (''They call it 'Passion-dale' ''). In 1917 is 't er doar êen van d'ergste veldsloagn uut 'n [[Êeste Weireldoorloge|Êesten Weireldôorlog]] uutevochtn: de Slag om Passchendoale (oek ekend ounder de noame Derde Slag om [[Yper]]) oungeveer en 100 000 soldoatn in 3 moandn zyn doar esneuveld. Voogns d'overleverienge woarn de veldn nie groen of nie bruun, mo rôod van ol 't bloed. [[Tyne Cot Cemetery]] is 't er 't bewys van: dat is 't 5de grotste kerkof up 't vaste land voe Iengelsche soldoatn.
+Voe vele [[Iengeland|Iengelsche]] is Passchendoale oek synoniem me d'elle, degêne die nie dôod woarn, zein da ze de psychischn dôod an gevoen (''They call it 'Passion-dale' ''). In 1917 is 't er doar êen van d'ergste veldsloagn uut 'n [[Êeste Weireldoorloge|Êesten Weireldôorlog]] uutevochtn: de [[Slag om Passchendoale]] (oek ekend ounder de noame Derde Slag om [[Yper]]) oungeveer en 100 000 soldoatn in 3 moandn zyn doar esneuveld. Voogns d'overleverienge woarn de veldn nie groen of nie bruun, mo rôod van ol 't bloed. [[Tyne Cot Cemetery]] is 't er 't bewys van: dat is 't 5de grotste kerkof up 't vaste land voe Iengelsche soldoatn.
 
 'n Iengelschn [[heavy metal]]groep [[Iron Maiden]] et er oek 't numer [[Paschendale (Iron Maiden)|Paschendale]] van emakt up nundern CD ''Dance of Death'' uut 2003. 
 
@@ -10,6 +10,7 @@ Voe vele [[Iengeland|Iengelsche]] is Passchendoale oek synoniem me d'elle, degê
 * D'oude koasmoakery
 * [[Tyne Cot Cemetery]]
 * Andre oorlogsmonnementn: [[Canada|Canadian]] Memorial, [[Nieuw-Zêeland|New-Zealand]] Memorial, [[Austroalië|Australian]] Memorial, New British Cemetery
+
 == Koas ==
 Paschendoale i setoe ekend van ze [[koas]] ([[Passendale koas|Passendale]]), die nu stief ekend is in hêel de Vloanders deur de reklamme up 'n tilleviezje.
 Ieder joar is er oek e koasstoet.
