--- a/De_Twidde_slag_om_Mêesn.mw
+++ b/De_Twidde_slag_om_Mêesn.mw
@@ -27,7 +27,7 @@ Mi nundern aanvol die d'rop voogde kostn de Brittn en d'Australiërs 'n euvelkam
 Op 10-11 april [[1918]] wos Mêesn were deur de Duutsche veroverd, moar op [[28 september]] [[1918]] wos 't voe goed bevryd deur troepn va [[Nieuw-Zêeland]] <ref>[http://ww1cemeteries.com/ww1cemeteries/messinesridgebritishcemetery.htm http://ww1cemeteries.com], URL bekeekn op 09/01/2007</ref>.
 
 == 't Vervoog ==
-De Twidde Slag om Mêesn wos e vôorloper van de [[Derde Slag om Ieper]], beter gekend oender de noame ''Passchendoale''.
+De Twidde Slag om Mêesn wos e vôorloper van de [[Derde Slag om Yper]], beter gekend oender de noame ''Passchendoale''.
 
 ==De slag om Mêesn... of de slag om Wytschoate?==
 D'Iengelsche klappn ossan over 'The Battle of Messines Ridge'. Toch zou 't even logisch zyn vo te klappn van ''The Battle of Wytschaete'' (lik dan de Duutschers ouk mêestol schryvn over ''der Schlacht am Wytschaete-Bogen'') omda Wytschoate in 't middn van 'n zak legt dan ze met de slag veroverd en. 't Probleem vo d'Iengelsche wos da by Wytschoate 't [[William Redmond|16ste Ierse Divisieregiment]] lag - e katholiek Iers regiment. D'Iengelsche zagen da ni zittn dan die Ieren me d'êre zoen goan loopn. Doavôorn kozen ze vo 'De slag om Mêesn' voe benoamienge, en dat is ton ook overgepakt deur de Nederlandstoalige geschiedenisseschryvers.
