*Empty MediaWiki Message*

--- a/1917.mw
+++ b/1917.mw
@@ -1,10 +1,10 @@
 ==Gebeurtenissn==
 ;Juli
-[[31 juli|31]]: Tussn [[Yper]] en [[Langemark]] begunn de Brittn me den [[Derd'n slag by Yper]].
+[[31 juli|31]]: Tussn [[Yper]] en [[Langemark]] begunn de Brittn me den [[Derdn slag by Yper]].
 
 ==Gestorvn==
 ;juni
-[[7 juni|7]] - [[William Redmond]], gesneuveld by [[De Twêede slag om Mêesn]]
+[[7 juni|7]] - [[William Redmond]], gesneuveld by [[De Twêede slag om Mêesn]].
 
 [[Categorie:1910-1919]]
 
