*Empty MediaWiki Message*

--- a/1917.mw
+++ b/1917.mw
@@ -1,6 +1,6 @@
 ==Gebeurtenissn==
 ;Juli
-[[31 juli|31]]: Tussn [[Yper]] en [[Langemark]] begunn de Brittn me den [[Derdn slag by Yper]].
+[[31 juli|31]]: Tussn [[Yper]] en [[Langemark]] begunn de Brittn me den [[Derdn Slag by Yper]].
 
 ==Gestorvn==
 ;juni
