/* Uutsloagn competitie */  2-3 vorlopig...

--- a/Club_Brugge_KV.mw
+++ b/Club_Brugge_KV.mw
@@ -172,7 +172,10 @@ De vôorbereidienge start traditioneel mè oefnmatchkes teegn ploegn uut loager 
 |-
 | 27 || style="text-align:left;" | '''FC Dender''' - Club Brugge || 1 - 0 || 54 || 2
 |-
-| 26 || style="text-align:left;" | Club Brugge - '''Racing Genk''' || 2 - 6 || 54 || 3
+| 26 || style="text-align:left;" | Club Brugge - '''Racing Genk''' || 2 - 6 || 54 || 37
+|-
+| 27 || style="text-align:left;" | SV Zulte Waregem - Racing Genk || 2 - 3* || 57 || xx
+
 |}
 <sup>*</sup>Mats uutgesteld van 't slicht weer
 
