/* Uutsloagn competitie */ Club nog e ki ewonn

--- a/Club_Brugge_KV.mw
+++ b/Club_Brugge_KV.mw
@@ -172,9 +172,9 @@ De vôorbereidienge start traditioneel mè oefnmatchkes teegn ploegn uut loager 
 |-
 | 27 || style="text-align:left;" | '''FC Dender''' - Club Brugge || 1 - 0 || 54 || 2
 |-
-| 26 || style="text-align:left;" | Club Brugge - '''Racing Genk''' || 2 - 6 || 54 || 37
+| 26 || style="text-align:left;" | Club Brugge - '''Racing Genk''' || 2 - 6 || 54 || 3
 |-
-| 27 || style="text-align:left;" | SV Zulte Waregem - Racing Genk || 2 - 3* || 57 || xx
+| 27 || style="text-align:left;" | SV Zulte Waregem - '''Club Brugge''' || 2 - 3 || 57 || ?
 
 |}
 <sup>*</sup>Mats uutgesteld van 't slicht weer
