*Empty MediaWiki Message*

--- a/Arsenal_(muzikgroep).mw
+++ b/Arsenal_(muzikgroep).mw
@@ -1,4 +1,4 @@
-'''Arsenal''' is e [[Vlams]] duo die muzik makt die e mix is van pop en weireldmuzik. Ze bestoan vôornoamelik uut twi gastn: Hendrik Willemyns (die van [[Toeroet]] afkomstig is) en John Roan. Op veel nummers komn d'r doa nog ander zangers en zangeressn by, lik Gabriel Rios. Nunder muzik is goed dansboar e doet e surtout live styf goed op de zomerfestivals.  
+'''Arsenal''' is e [[Vlams]] duo die muzik makt die e mix is van pop en weireldmuzik. Ze bestoan vôornoamelik uut twi gastn: Hendrik Willemyns (die van [[Toeroet]] afkomstig is) en John Roan. Op veel nummers komn d'r doa nog ander zangers en zangeressn by, lik Gabriel Rios. Nunder muzik is goed dansboar e doet 't surtout ''live'' styf goed op de zomerfestivals.  
 
 ==Discografie==
 * Oyebo Soul - lp (Wha Roots! 2003)
