--- a/Piere.mw
+++ b/Piere.mw
@@ -1,13 +1,15 @@
-Een piere is een vaste dyk die vanof 't strange 'n ende in de zêe lopt. 
-Dr bestoan verschillende sôortn:
+[[Ofbeeldienge:Blankenberge Oosterstaketsel 01.jpg|thumb|<center>Staketsel in Blanknberge]]
+[[Ofbeeldienge:Scheveningse pier.jpg|thumb|<center>Piere in Scheveningen]]
+Een '''piere''' is een vastn dyk die vanof 't [[strange]] 'n ende in de zêe lopt. 
+D'r bestoan verschillige sôortn:
 
-* Een outn constructie mè poalen vo d'oavengeule of te boaknen (estacade of staketsel) lik dan dr vele zyn an de kust. Ip 't uutende stoat er ton e klêen [[viertorre]]tje.
+* Een outn constructie mè poalen vo d'oavegeule of te boaknen (estacade of staketsel) lik dan dr vele zyn an de kust. Ip 't uutende stoat er ton e klêen [[viertorre]]tje.
 
-* Een toeristische piere, die gebouwd is vo de toeristn 'n ende oovr de zêe te loatn wandelen. Ip 't uutende stoat er ton e bouwsel mè café-restaurang en andere attracties. An de Vlamsche kust is ter moar êen en dat is in [[Blanknberge]]. Nog bekende toeristische pieren è je in [[Olland]]: [[Scheveningen]] en [[Iengeland]]: [[Brighton]], [[Blackpool]], [[Southend]]. D' êeste zyn gebouwd in Iengeland in de 19e êeuw. Deur d'introductie van de spôorweegn is 't massatoerisme ton ip gank gekommn.
+* Een recreoatiepiere, die gebouwd is vo de touristn 'n ende over de zêe te loatn wandeln. Ip 't uutende stoat er ton e bouwsel mè café-restaurang en andere attracties. An de [[Vlamsche Kust]] ist er moar [[Piere (Blanknberge)|één]] en dat is in [[Blanknberge]]. Nog bekende recreoatiepieren è je in [[Olland]]: Scheveningen en [[Iengeland]]: Brighton, Blackpool, Southend. D'êeste zyn gebouwd in Iengeland in de 19ste êeuwe. Deur d'introductie van de spôorweegn is 't massatourisme ton ip gank gekommn.
 
 * G'eit ôok pieren ip 't [[vliegpling]] woada de vliegers koomn anleggn.
 
-Piere is ôok en Vlams word vô [[tettink]] of [[teirienk]]. Ne pierewoai es êen die nie weet wa dat ie wilt en droait noa de wind.
+Piere is ôok en Vlams word vô [[tettink]] of teirienk. Ne pierewoai es êen die nie weet wa dat ie wilt en droait noa de wind.
 
 [[Categorie:Gebouw]]
 
