--- a/Arsenal_(muzikgroep).mw
+++ b/Arsenal_(muzikgroep).mw
@@ -13,5 +13,8 @@
 *[http://www.arsenal-music.com Nundern officieeln site] 
 *[http://www.lotuk.be Promosite van ''Lotuk''] 
 
+
+[[Categorie:Belgische groep]]
+
 [[en:Arsenal (band)]]
 [[nl:Arsenal (band)]]
