--- a/Fort_Napoleon.mw
+++ b/Fort_Napoleon.mw
@@ -1,7 +1,7 @@
 {{plat|Ostends}}
 [[Ofbeeldienge:Dia17.JPG|thumb|right|Luchtbeeld van het fort]]
 
-Het '''Fort Napoleon''' es een istorisch fort in [[Ostende (stad)|Ostende]]. 't Es in [[1810]] in ipdracht va [[Napoleon]] gebouwd gewist, om de dreigienge vanuut [[Iengeland]] te weerstoan.
+Het '''Fort Napoleon''' es een istorisch fort in [[Ostende (stad)|Ostende]]. 't Es in [[1810]] in ipdracht va [[Napoleon Bonaparte|Napoleon]] gebouwd gewist, om de dreigienge vanuut [[Iengeland]] te weerstoan.
 
 ==Vorm==
 't Fort is gebouwd volgens e vuufhoekig grondplan, me de punt no de zèè.
