/* Clubs als trainer */

--- a/Lorenzo_Staelens.mw
+++ b/Lorenzo_Staelens.mw
@@ -13,11 +13,11 @@ Achter zyn actieve carrière ist 'n e tydje trainer ewist by Moeskroen en zelfs 
 * Oita Trinita: 2001
 
 == Clubs als trainer ==
-* Excelsior Moeskroen: 2001 (chef van de jeugsopleidieng)
+* Excelsior Moeskroen: 2001 (chef van de jeugdopleidieng)
 * Excelsior Moeskroen: 2002-2003 (oofdtrainer)
-* Eendracht Aalst: 2003 (2 moan)
+* Eendracht Aalst: 2003 (2 moandn)
 * BS Poperinge: (speler-trainer)
-* [[KV Kortrijk]]: 2006
+* [[KV Kortrijk]]: 2006-2007 (sportleider)
 * [[KSV Roeselare]]: 2007 (ulptrainer)
 
 [[Categorie:West-Vlamsche voetboller|Staelens, Lorenzo]]
