--- a/Blue_Star_Poperinge.mw
+++ b/Blue_Star_Poperinge.mw
@@ -7,7 +7,7 @@
   stadiong   = Don Bosco |
   capaciteit = +/- 500 |
   vôorzitter = [[Ofbeeldienge:Flag of Belgium.svg|20px]] [[Willy Lamaire ]] |
-  trainer  = [[Ofbeeldienge:Flag of Belgium.svg|20px]] [[Pascal Renier]] |
+  trainer  = [[Ofbeeldienge:Flag of Croatia.svg|20px]] Jerko Tipuric |
   competisje   = [[Provinciale (voetbol)|Êeste Provinciale]] |
   geldig=2007/08
 }}
