*Empty MediaWiki Message*

--- a/Slag_om_Passchendoale.mw
+++ b/Slag_om_Passchendoale.mw
@@ -1,13 +1,15 @@
-{{beg}}De '''Slag by Passchendoale''', of de '''Derdn Slag by Yper''', ([[1917]]) wos êen van de zwoarste veldsloagn in ’n [[Êestn Weireldôorlog]]. De Geallieerde troepn mi d’Iengelsche, de Canadeezn, ’n ANZAC en Zuud-Afrikoann vieln de Duutsche an by [[Passchendoale (Zunnebeke)|Passchendoale]] in [[West-Vloandern]]. 
+{{beg}}De '''Slag om Passchendoale''', of de '''Derdn Slag by Yper''', ([[1917]]) wos êen van de zwoarste veldsloagn in ’n [[Êestn Weireldôorlog]]. De Geallieerde troepn mi d’Iengelsche, de Canadeezn, ’n ANZAC en Zuud-Afrikoann vieln de Duutsche an by [[Passchendoale (Zunnebeke)|Passchendoale]] in [[West-Vloandern]]. 
 
 De bedoelieng van de Geallieerde wos om deur de Duutsche linies te breekn en deure te steekn na de zêe.’t Wos e stryd die van tranchée tout tranchée verliep, en woaby da de verliezen an weerskantn enorm woarn. De Duutsche verlôorn à peu près 250.000 mann, de Geallieerde zelfs bykan 500.000. De Slag by Passchendoale is spreekwôordelik ekommn in ’t Iengels. E stoat synoniem mi ’n gruwel van ôorlog. 
 
 == Vôorgeschiedenisse ==
 [[De Twidde slag om Mêesn]], in juni 1917, wos 'n êeste ki an 't westelik frount da d'er minder Geallieerde dan Duutsche dôodn woarn. Veldmaarschalk sir [[Douglas Haig| Douglas Haig]] wos d'rvan overtuugd da zyn leger, achter deze overwinnienge, mi 'n zelfsn taktik ouk de grôotn Slag by Yper gounk win. Moa dat pakte angers uut.
 
+== Anloop ==
+Haig, 'n Oppercommandant van d'Iengelsche, doet e beroep op 't Vuufde Leger van generaal Gough, en 't Twidde Leger van [[Herbert Plumer|generaal Plumer]]. Êest moet d'Iengelsche artillerie de Duutsche vedediging deurbreekn, en doarachter zoudt er een aanval moetn kommn van d'infanterie.  
+Moa de Duutsche gebruukn 4 doagn vôorn de geplandn aanval, op 'n 12sn juli 1917, vo 'n êest ki [[Yperiet]] tegen de Brittn. 
 
-
-
+''(wordt vervolgd)''
 
 [[Categorie: Nieuwstn tyd |Slag by Passchendoale]]
 [[Category:Zunnebeke]]
