--- a/Johan_Depoortere.mw
+++ b/Johan_Depoortere.mw
@@ -1,4 +1,4 @@
-'''Johan Depoortere''' ([[Rôzebeke]], [[21 november]]) es nen [[journalist]] by de [[VRT]].
+'''Johan Depoortere''' ([[Rôzebeke]], [[21 november]] [[1944]]) es nen [[journalist]] by de [[VRT]].
 
 ==Carrière==
 Johan Depoortere es achter zyn studies Germoanse filologie begonn als journalist by het toenmoalige [[BRT]] journoal in [[1970]]. Ie es sedert ton een veelgezien figure in de nieuwsprogramma's van de VRT, gelik Panorama.
