*Empty MediaWiki Message*

--- a/1944.mw
+++ b/1944.mw
@@ -9,6 +9,9 @@
 ;oktober 
 *[[22 oktober|22]] - [[Raoul Lambert]]
 
+;november
+*[[21 november|21]] - [[Johan Depoortere]]
+
 == Gestorven ==
 ;januoari
 *[[1 januoari|1]] - [[Sir Edwin Lutyens]]
