referentie verwijderd: artikel was niet meer online

--- a/Patrick_Lefevere.mw
+++ b/Patrick_Lefevere.mw
@@ -6,8 +6,8 @@ Patrick Lefevere es anno 2006 ôok vôorzittre van Verenigienge van Internationo
 
 Patrick Lefevere duft oltemets stravve uutsproakn doen. Latst ètn Tour-winnoare Floyd Landis uutgemakt achter zyn vermêend [[dopienge|dopinggebruuk]].
 
-In januari 2007 komt er een reke artikels uut in de gazette Het Laatste Nieuws woarin da Lefevere zwoar beschuldigd es van 't organiseern van dopinge by zyn coureurs.<ref>[http://www.hln.be/hlns/cache/det/art_357733.html?wt.bron=hlnMatrix Het Laatste Nieuws], URL bekeek'n op 24/01/2007</ref>
-Lefevere start 'n zoake vo 't gerecht tegen de gazette. 't Verhoal angt met oakn' en ôogn an mekoar en stoat vul met leugens, zegt ie.
+In januari 2007 komt er een reke artikels uut in de gazette Het Laatste Nieuws woarin da Lefevere zwoar beschuldigd es van 't organiseern van dopinge by zyn coureurs. 
+Lefevere start 'n zoake vo 't gerecht tegen de gazette. 't Verhoal angt met oakn en ôogn an mekoar en stoat vul met leugens, zegt ie.
 
 == Profcarrière als coureur ==
 * 1976: by Ebo - Cinzia
@@ -15,11 +15,10 @@ Lefevere start 'n zoake vo 't gerecht tegen de gazette. 't Verhoal angt met oakn
 * 1978 en '79: Marc Zeepcentrale - Superia
 
 '''Overwinniengn'''
-
 * 1975: 4de etappe Olympia's Tour (by de liefebbers) 
 * 1976: [[De Panne]]; Merelbeke 
-* 1977: [[Gullegem]]; Maaslandse Piel 
-* 1978: [[Kuurne-Brussel-Kuurne]]; 4de etappe Roende van Spanje; [[Westrozebeke]] 
+* 1977: [[Gullegem]]; Maaslandse Pyl 
+* 1978: [[Kuurne-Brussel-Kuurne]]; 4de etappe Rounde van Spanje; [[Westrozebeke]] 
 * 1979: Omlôop van de Grensstreke
 
 == Carrière als ploegleidre ==
