/* Profcarrière als coureur */ links verwijderd: verwezen niet naar de koersen maar naar de gemeenten

--- a/Patrick_Lefevere.mw
+++ b/Patrick_Lefevere.mw
@@ -16,9 +16,9 @@ Lefevere start 'n zoake vo 't gerecht tegen de gazette. 't Verhoal angt met oakn
 
 '''Overwinniengn'''
 * 1975: 4de etappe Olympia's Tour (by de liefebbers) 
-* 1976: [[De Panne]]; Merelbeke 
-* 1977: [[Gullegem]]; Maaslandse Pyl 
-* 1978: [[Kuurne-Brussel-Kuurne]]; 4de etappe Rounde van Spanje; [[Westrozebeke]] 
+* 1976: De Panne; Merelbeke 
+* 1977: Gullegem; Maaslandse Pyl 
+* 1978: [[Kuurne-Brussel-Kuurne]]; 4de etappe Rounde van Spanje; Westrozebeke
 * 1979: Omlôop van de Grensstreke
 
 == Carrière als ploegleidre ==
