--- a/Frankfurt.mw
+++ b/Frankfurt.mw
@@ -7,7 +7,7 @@ In 't stad zelve weunn d'r 660.000 menschn. Pak je grôot-Frankfurt, ton kom je 
 Frankfurt is 't financieel centrum van Duutsland. De Beurze is doa en de Bundesbank oek. Typisch an Frankfurt zyn d'oge gebouwn da je idder zou verwachtn in [[Amerika]], moa nie in [[Europa]]. Doarom noemn ze de stad oek wel ''Mainhattan''.
 Oek bekend an Frankfurt is de ''Buchmesse'', de boekebeurze die ze idder joar in oktober oun.
 
-Frankfurt es de grotste stee van de [[Duutsche deelstoat|deelstoat]] [[Essen]], grodder dan d'oofdstee (''[[Wiesbaden]]'').
+Frankfurt es de grotste stee van de [[Duutsche deelstoat|deelstoat]] [[Hessen]], grodder dan d'oofdstee (''[[Wiesbaden]]'').
 
 De burgemêester va Frankfurt is voe 't moment (2006) Petra Roth. 
 
@@ -16,6 +16,7 @@ De burgemêester va Frankfurt is voe 't moment (2006) Petra Roth.
 
 {{Commons|Frankfurt am Main}}
 
+[[Categorie: Frankfurt am Main]]
 [[Categorie:Stad in Duutsland]]
 
 [[af:Frankfurt am Main]]
