*Empty MediaWiki Message*

--- a/Blanknberge.mw
+++ b/Blanknberge.mw
@@ -37,9 +37,10 @@
 |}}
 [[Ofbeeldienge:Blankenberge-DePier.JPG|thumb|right|<Center>De piere van Blanknberge]]
 [[Ofbeeldienge: Blankenberge - Casino 1.jpg|thumb|<center>Kruupnde baby 's van David Černý ip de Cazjeno]]
-'''Blanknberge''' (officieel [[Nederlands]]: ''Blankenberge'') is een kuststadje in [[West-Vloandern]]. 't Is ein van de populairste en drukste plekkn an de Vlamsche kust. D’r weunn meir of 18.300 menschn. Blanknberge et ein deilgemeinte: [[Uutkerke]].
+[[Ofbeeldienge:Blankenberge Oosterstaketsel 02.jpg|thumb|<center>d'Estacade me Zeibrugge in de verte]]
+'''Blanknberge''' (officieel [[Nederlands]]: ''Blankenberge'') is een kuststadje in [[West-Vloandern]]. 't Is ein van de populairste en drukste plekkn an de [[Vlamsche Kust]]. D’r weunn meir of 18.300 menschn. Blanknberge et ein deilgemeinte: [[Uutkerke]].
 [[Ofbeeldienge:Belgium-blankenberge-beach-1900.jpg|thumb|left|<Center>Blanknberge strange 1900]]
-Je ziet ze van alle kantn komn noa ‘t strange. In ’t oogsizoen legt de NMBS zelfs speciale trings in vo de touristn.
+Je ziet ze van alle kantn kommn noa ‘t strange. In ’t oogsizoen legt den [[NMBS]] zelfs speciale trings in vo de touristn.
 
 ==Geschiedenisse==
 *[[Scarphout (Blanknberge)|Scarphout]]
@@ -49,31 +50,30 @@ Je ziet ze van alle kantn komn noa ‘t strange. In ’t oogsizoen legt de NMBS 
 *[[Roesschaert]]
 
 == Attraksjes ==
-* [[Sea Life Centre]], woa da je kennis makt met 't leevn ounder woater. Je kunt'r beistn bekykn van over heil de weireld.
-* [[De Lustige Velodroom]], e vèloboane in out woa da je roundjes kun ryen ip kluchtige vèlo's. 
-* De amfibiebowt, een voertuug dat ip land kan ryen en ip zeie kan voaren. Van ip 't strange rydt 'n rechte de zeie in vor e tochtje ip 't woater. De excursie deurt 30 minuutn.
-* 't [[Serpentarium]], geleegn ip den dyk
+* [[Sea Life Centre]], woa da je kennis makt met 't leevn ounder woater. Je kunt d'r beistn bekykn van over heil de weireld.
+* De [[De Lustige Velodroom|Velodrome]], e vèloboane in out woa da je roundjes kun ryen ip kluchtige vèlo's. 
+* Den amfibie, een voertuug dat ip land kan ryen en ip zeie kan voaren. Van ip 't strange rydt 'n rechte de zeie in vor e tochtje ip 't woater. 
+* 't [[Serpentarium]], geleegn ip den dyk.
 * De Scute, B1 Sint-Pieter, 'n authentieke replica van 'n oude visschersbowt lik dan ze eiwenlange voardn an uze kust. Je kunt er kennis moakn met 't visschersleevn lik dat 't vroeger was.
 * De [[viertorre (Blanknberge)|viertorre]] met 't zeimuseum. 
 
 == Beziensweirdigeedn ==
 * 'n Antrekkelik [[strange]] met een lengte van 3,3 km. In de zomer kun je cabientjes, ligzetels en parasols euren. D'r zyn ook vintn die roundgoan met bakkn crème glace of met e  plateau [[Boule de Berlin|Boule de L'Yser]]s. Je kunt z' owren roepn van in de verte. Ook ip den dyk van 2 km lank valt er vanalles te beleevn.
-* De jachtoavn, de vroegere visschersoavn van Blanknberge is uutgebouwd tout 'n moderne jachtoavn met 1000 ligplatsn.
+* De jachtoave, de vroegere visschersoave.
 * De twi estacades (staketsels) woa dat de voargeule tusschen lopt. Ze zyn vernield gewist deur de Duutschers ip 't ende van [[Twiddn Weireldoorloge|WO2]] en volledig erbouwd. 't Owsterstaketsel begun joaren 1950 in out en 't westerstaketsel begun joaren '70 in betong.
 * De [[Casino (Blanknberge)|Cazjeno]], cultureel centrum.
 * De [[Paravang]], een sierlik bouwsel uut de [[Belle-Epoque]]-periode.
 *[[Art Nouveau (Blanknberge)|Art Nouveau]] 
 * 't [[Monument van Lippens en De Bruyne]] ip den dyk.
-* 't [[Uzetje van Majutte]]: 't einigste visschersuzetje van Blanknberge dat bewoard gebleevn is en gerestaureerd. Pé Majutte was de lapnoame van Pieter De Bruyne, een Blanknbergsche visscher die doa weunde met z'n familie.
-* De [[Fonteintjes]], e nateurgebied in de duunn tusschn Blanknberge en [[Zêebrugge|Zeibrugge]] en 't [[Zêebus|Zeibus]] in 't [[Polders|poldergebied]].
-* De [[Piere]], 'n uniek bouwwerk met een wandelbrugge in de zeie van 350 m lank. D' eiste piere dateert van 1894 moar is in 1914 ofgebrand deur de Duutschers. In 1933 is de nieuwe piere gebouwd en in 2003 gerenoveerd. Binst de Duutsche bezettinge in WO2 negeerde de Duutscher Karl-Heinz Keseberg 't bevel van z'n overstn vo de Blanknbergsche piere te dynamiteern. Doarom noemdn z'em de redder van dat unicum an uze kust. Tusschn K.H. Keseberg en 't Blanknbergs stadsbestier ist er alsan e vriendschapsband bluuvn bestoan. Nu en ton kwamt'n vor e korte vakanse met z'n vrouwe en zeune en loater met z'n kleinjoungers. In november 2006 kreig Blanknberge 't bericht dat de redder van de piere ip 85-joarige leeftyd gestorvn is.
-
+* 't [[Uzetje van Majutte]]: 't einigste visschersuzetje van Blanknberge dat bewoard gebleevn is en gerestaureerd.
+* De [[Fonteintjes]], e nateurgebied in de [[dune|duunn]] tusschn Blanknberge en [[Zêebrugge|Zeibrugge]] en 't [[Zêebus|Zeibus]] in 't [[Polders|poldergebied]].
+* De [[Piere (Blanknberge)|Piere]], 'n uniek bouwwerk met een wandelbrugge in de zeie van 350 m lank. 
 ==Evenementn==
 *Carnaval wordt in Blanknberge styf gevierd. De zundag vo de vastn trekt de carnavalstoet deur de stroatn, de moandag is ’t kindercarnavalstoet en biertente ip de markt, den diesendagachternoene de Vule Jeanettestoet en ip vastnoavond carnavalambiance in de stroatn van Blanknberge en surtout in de cafés.
 *Twee daagse van Vlaanderen: wandeltocht ieder joar ‘t eiste weekend van meie en de [[Stormtocht]] in 't noajoar [http://www.2daagse.be]
 *Klankenberge: muzikaal evenement, iedere vrydag in juli en augustus
 *Parkklanken: zomerfestival in oopn lucht in ’t Albert I Park, iedere woensdagoavond in juli en augustus
-*Zomershow Crazy World in "Het Witte Paard" in juli en augustus. [http://www.witte-paard.be]
+*Zomershow Crazy World in 't ''Wit Peird'' in juli en augustus. [http://www.witte-paard.be]
 *Blommestoet, iedere latste zundag van augustus
 
 ==Deilgemeinte ==
@@ -149,7 +149,7 @@ Je ziet ze van alle kantn komn noa ‘t strange. In ’t oogsizoen legt de NMBS 
 * Jiu-jitsu: Jiu-jitsu Blankenberge: [http://www.jiu-jitsu-blankenberge.be Website]
 
 ==Openboar vervoer==
-*[[Stoatie van Blanknberge]]
+*[[Stoatie van Blanknberge|Stoasje]]
 *[[Kusttram]]
 
 ==Veloroute==
@@ -174,11 +174,11 @@ Je ziet ze van alle kantn komn noa ‘t strange. In ’t oogsizoen legt de NMBS 
 
 ==Toale==
 Blanknbergs is een toale die nieverans anders gesprookn wordt, zelfs nie in de gemeintn d'r round, Zeibrugge, [[Wendune|Windune]] en Uutkerke. 't Wordt bykans alleine nog deur d'oudere menschn geklapt wat da vreindig spytig is. Ook dowdjammer is dat er vele woordn zyn die verdwynn. Os j' an de joungere generoasje vroagt wat dat e "koudzaksje" is verstoan ze da nie mè. Alleine d'oudere weetn dat dat 'n (ys)crème is. 
-Vele blanknbergenoars weunn nu in Uutkerke vo 't drukke tourisme t'ountvluchtn. En d'r zyn vele touristn, die under oude dag deure bringn an de zeie. In Blanknberge styf vele [[Antwerpn|Antwerpenoars]]. Die nieuwe Blanknbergenoars wordn "angespoeldn" genoemd.
+Vele Blanknbergenoars weunn nu in Uutkerke vo 't drukke tourisme t'ountvluchtn. En d'r zyn vele touristn, die under oudn dag an de zeie deure bringn. In Blanknberge vreindig vele [[Antwerpn|Antwerpenoars]]. Die nieuwe Blanknbergenoars wordn ''angespoeldn'' genoemd.
 
 Oefeninge: 'k Stoan mè m'n ein bein in de zeie. 'k Koopn e growt browd by de bakker. 'k Zittn an 't stier van m'n otto. 't Is vreindig geistig.
 
-Een Blanknbergenoare noemt Blanknberge: "uus steedje".
+Een Blanknbergenoare noemt Blanknberge: '''t steedje''.
 
 == Varia ==
 Blanknberge is vereiwigd in e kluchtig liedje van Hugo Matthysen. E poar zinnetjes:<br>
