*Empty MediaWiki Message*

--- a/Rounde_van_Vloandern.mw
+++ b/Rounde_van_Vloandern.mw
@@ -12,6 +12,7 @@ De '''Rounde van Vloandern''' is de belangrykste [[koerse]] van [[Vloandern]]. D
 *2005	[[Tom Boonen]] [[Ofbeeldienge:Flag of Belgium.svg|20px]]
 *2006	[[Tom Boonen]] [[Ofbeeldienge:Flag of Belgium.svg|20px]]
 *2007	[[Alessandro Ballan]] [[Ofbeeldienge:Flag of Italy.svg|20px]]
+*2008	[[Stijn Devolder]] [[Ofbeeldienge:Flag of Belgium.svg|20px]]
 
 ==Beklimmiengn uut de Rounde van Vloandern==
 {| width=65%
